[St] fix a bug noticed by gcc -O3

https://bugzilla.gnome.org/show_bug.cgi?id=623295